app/styles/_sidebar.scss
.sidebar {
  @extend .scrollable;
  user-select: none;
}

#filter-bar {
  @include hide-at($filter-bar-collapse-width);

  width: $sidebar-width;
  min-width: $sidebar-width;
  border-right: 1px solid $navbar-default-border;


  .filter-group {
    &.active h5 {
      background: $active-color;
      color: white;
      text-shadow: none;
      border-color: transparent;

      .icon-active-group {
        display: block;
      }
    }
    &.general h5 {
      padding-bottom: 4px; // Tweaking to make some lines connect
    }

    h5 {
      margin-top: 0;
      margin-bottom: 2px;
      padding: 5px 4px 5px 10px;

      color: #9b9b9b;
      font-size: 11px;
      line-height: 1.8;
      text-shadow: 1px 1px 3px white;
      text-transform: uppercase;
      font-weight: 200;
      cursor: pointer;

      background: #f8f8f8;
      border:  1px solid $navbar-default-border;
      border-left: none;
      border-right: none;

      // Don't use subpixel letter-spacing unless we're on a screen that can support it
      @include retina {
        letter-spacing: 0.3px;
      }
    }
  }

  .filter-group-field {
    position: relative;
    padding: 0 15px 0 3px;
    margin: 8px 0;

    > .control-label {
      float: left;
      width: 45px;
      text-align: center;
      color: #777;
    }

    .clear-filter {
      position: absolute;
      top: 2px;
      font-size: 16px;
      display: none;
      color: #555;

      &:hover {
        text-decoration: none;
      }
    }

    input.has-input, .has-input input, .has-input .select2-choice {
      background: #C2E4FF;
      border-color: #aaa;
    }

    .has-input + .clear-filter {
      display: inline;
    }

    input[type=search] {
      width: calc(100% - 45px);

      & + .clear-filter {
        right: 23px;
      }
    }

    .faction-filter {
      & + .clear-filter {
        margin-left: 5px;
      }
    }

    inset-filter {
      .input {
        width: calc(100% - 45px);
      }

      & + .clear-filter {
        right: 38px;
        top: 3px;
      }
    }

    numeric-filter {
      & + .clear-filter {
        right: 23px;
      }
    }

    // Hack to make weirdo font appear correctly
    .icon-memory-unit {
      position: relative;
      top: -1px;
      left: -1px;
      font-size: 11px;
    }

    &.faction {
      button {
        padding-left: 6px;
        padding-right: 6px;
      }
    }

    &.disabled {
      > .control-label {
        color: $disabled-label-color;
      }
    }
  }
}

